--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -38,13 +38,12 @@
 							{{"Please enter valid Email or Mobile, and password" | translate}}
 						</div>
 					</form>
-					<p class="sgntrm145">Or <a [routerLink]="['/forgotPassword']" routerLinkActive="router-link-active" >{{"Forgot Password" | translate}}</a>.</p>
+					<p class="sgntrm145">{{"Or" | translate}} <a [routerLink]="['/forgotPassword']" routerLinkActive="router-link-active" >{{"Forgot Password" | translate}}</a>.</p>
 					<p class="mb-0 mt-30 hvsng145">{{"Don't have an account?" | translate}} <a [routerLink]="['/signup']" routerLinkActive="router-link-active" >{{"Sign Up" | translate}}</a></p>
 				</div>
 			</div>
-			<div class="sign_footer"><img src="assets/dashboard/images/sign_logo.png" alt="">© 2020 <strong>Smart
-					Academy</strong>.
-				All Rights Reserved.</div>
+			<div class="sign_footer"><img src="assets/dashboard/images/sign_logo.png" alt="">© 2020 <strong>{{"Smart Academy" | translate}}</strong>. {{"All
+				Rights Reserved" | translate}}.</div>
 		</div>
 	</div>
 </div>
