--- a/src/app/pages/admin/components/admin-footer/admin-footer.component.html
+++ b/src/app/pages/admin/components/admin-footer/admin-footer.component.html
@@ -15,8 +15,8 @@
                             <ul class="fotb_left">
                                 
                                 <li>
-                                    <p>© 2020 <strong>{{"Smart Academy" | translate}}</strong>{{". All Rights Reserved." | translate}}</p>
-                                </li>
+                                    <strong>{{"Smart Academy" | translate}}</strong>. {{"All
+                                    Rights Reserved" | translate}}.                                </li>
                             </ul>
                         </div>
                         <!-- <div class="col-md-6">
