--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -98,15 +98,15 @@
       <div class="copyrights">
         <!-- Social menu-->
         <ul class="social list-inline-item">
-          <li class="list-inline-item"><a target="_blank" class="social-link"><i class="icon ion-logo-twitter"></i></a>
+          <!-- <li class="list-inline-item"><a target="_blank" class="social-link"><i class="icon ion-logo-twitter"></i></a>
           </li>
           <li class="list-inline-item"><a target="_blank" class="social-link"><i class="icon ion-logo-facebook"></i></a>
           </li>
           <li class="list-inline-item"><a target="_blank" class="social-link"><i class="icon ion-logo-youtube"></i></a>
-          </li>
+          </li> -->
         </ul>
-        <p class="copyrights-text mb-0">Copyright &copy; 2020 All rights reserved to <a class="copyrights-link">smart
-            Academy</a></p>
+        <p class="copyrights-text mb-0"><strong>{{"Smart Academy" | translate}}</strong>. {{"All
+          Rights Reserved" | translate}}. </p>
       </div>
     </div>
   </footer>
