--- a/src/app/pages/user/components/user-footer/user-footer.component.html
+++ b/src/app/pages/user/components/user-footer/user-footer.component.html
@@ -15,7 +15,8 @@
                             <ul class="fotb_left">
                                 
                                 <li>
-                                    <p>© 2020 <strong>{{"Smart Academy" | translate}}</strong>{{". All Rights Reserved." | translate}}</p>
+                                    <p>© 2020 <strong>{{"Smart Academy" | translate}}</strong>. {{"All
+                                        Rights Reserved" | translate}}.</p>
                                 </li>
                             </ul>
                         </div>
