--- a/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
+++ b/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
@@ -44,7 +44,7 @@
 										<td class="text-center">
 											<a (click)="onEditClick(course)" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
 											<a (click)="ocDeleteClick(course)" title="Delete" class="gray-s"><i class="uil uil-trash-alt"></i></a>
-											<a (click)="ocViewCourseClick(course)" title="Delete" class="gray-s"><i class="uil uil-eye"></i></a>
+											<a (click)="ocViewCourseClick(course)" title="View" class="gray-s"><i class="uil uil-eye"></i></a>
 										</td>
 									</tr>
 								
