--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -11,10 +11,10 @@
 
 
 
-                <div *ngFor="let course of approvedCoursesArray" [routerLink]="['/user/viewCourse/',course.id]" routerLinkActive="router-link-active" class="col-xl-3 col-lg-6 col-md-6">
+                <div *ngFor="let course of approvedCoursesArray" [routerLink]="['/user/viewCourse/',course.id]"
+                    routerLinkActive="router-link-active" class="col-xl-3 col-lg-6 col-md-6">
                     <div class="fcrse_1 mb-20">
-                        <a 
-                            class="fcrse_img">
+                        <a class="fcrse_img">
                             <img src="{{ course.cover_image_path || 'assets/images/courses/img-14.jpg'}}" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
@@ -26,6 +26,10 @@
                         <div class="fcrse_content">
                             <a class="crse14s">{{course.course_title}}
                             </a>
+                            <a class="crse-cate" *ngIf="course.level === '1'">{{"1st" | translate}}</a>
+                            <a class="crse-cate" *ngIf="course.level === '2'">{{"1st" | translate}}</a>
+                            <a class="crse-cate" *ngIf="course.level === '3'">{{"1st" | translate}}</a>
+
                             <a class="crse-cate" *ngIf="course.language === '1'">Arabic</a>
                             <a class="crse-cate" *ngIf="course.language === '2'">English</a>
                             <div class="auth1lnkprce">
