--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -49,6 +49,9 @@
                         <div class="fcrse_content">
                             <a class="crse14s">{{course.course_title}}
                             </a>
+                            <a class="crse-cate" *ngIf="course.level === '1'">{{"1st" | translate}}</a>
+                            <a class="crse-cate" *ngIf="course.level === '2'">{{"1st" | translate}}</a>
+                            <a class="crse-cate" *ngIf="course.level === '3'">{{"1st" | translate}}</a>
                             <a class="crse-cate" *ngIf="course.language === '1'">Arabic</a>
                             <a class="crse-cate" *ngIf="course.language === '2'">English</a>
                             <div class="auth1lnkprce">
