--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -52,8 +52,8 @@
                             <a class="crse-cate" *ngIf="course.level === '1'">{{"1st" | translate}}</a>
                             <a class="crse-cate" *ngIf="course.level === '2'">{{"1st" | translate}}</a>
                             <a class="crse-cate" *ngIf="course.level === '3'">{{"1st" | translate}}</a>
-                            <a class="crse-cate" *ngIf="course.language === '1'">Arabic</a>
-                            <a class="crse-cate" *ngIf="course.language === '2'">English</a>
+                            <a class="crse-cate" *ngIf="course.language === '1'">{{"Arabic" | translate}}</a>
+                            <a class="crse-cate" *ngIf="course.language === '2'">{{"English" | translate}}</a>
                             <div class="auth1lnkprce">
                                 <p class="cr1fot">{{ 'By' | translate}} <a>{{course.first_name}}</a></p>
                                 <!-- <div class="prce142">$4</div> -->
