--- a/src/app/pages/instructor/edit-course/edit-course.component.html
+++ b/src/app/pages/instructor/edit-course/edit-course.component.html
@@ -161,10 +161,8 @@
                                                 </div>
                                                 <div class="view_img_right">
                                                     <h4>{{"Cover Image" | translate}}</h4>
-                                                    <p>{{"Upload your course image here. It must meet our course image
-                                                            quality standards to be accepted. Important guidelines:
-                                                            750x422 pixels; .jpg, .jpeg,. gif, or .png. no text on the
-                                                            image." | translate}}</p>
+                                                    <p>{{"'Upload your course image here. It must meet our course image quality standards to be accepted. Important guidelines: 493*352 pixels; .jpg, .jpeg,. gif, or .png. no text on the image.'" | translate}}
+                                                    </p>
                                                     <div class="upload__input">
                                                         <div class="input-group">
                                                             <div class="custom-file">
