--- a/src/app/pages/user/my-courses/my-courses.component.html
+++ b/src/app/pages/user/my-courses/my-courses.component.html
@@ -11,7 +11,7 @@
 
 
 
-                <div *ngFor="let course of approvedCoursesArray" [routerLink]="['/user/study',course.course_id]" class="col-xl-3 col-lg-6 col-md-6">
+                <div *ngFor="let course of approvedCoursesArray" [routerLink]="['/user/study',course.course_id]" class="col-12 col-md-6 col-xl-4">
                     <div class="fcrse_1 mb-20">
                         <a  class="fcrse_img">
                             <img src="{{ course.cover_image_path || 'assets/images/courses/img-14.jpg'}}" alt="">
