--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -12,7 +12,7 @@
 
 
                 <div *ngFor="let course of approvedCoursesArray" [routerLink]="['/user/viewCourse/',course.id]"
-                    routerLinkActive="router-link-active" class="col-xl-3 col-lg-6 col-md-6">
+                    routerLinkActive="router-link-active" class="col-12 col-md-6 col-xl-4">
                     <div class="fcrse_1 mb-20">
                         <a class="fcrse_img">
                             <img src="{{ course.cover_image_path || 'assets/images/courses/img-14.jpg'}}" alt="">
