--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -28,6 +28,9 @@ rtl style
 	direction: rtl;
 	text-align: right;
 }
+router-outlet {
+	display: none;
+}
 
 /* .rtl html, .rtl body, .rtl div, .rtl span, .rtl applet, .rtl object, .rtl iframe,
   .rtl h1, .rtl h2, .rtl h3, .rtl h4, .rtl h5, .rtl h6, .rtl p, .rtl blockquote, .rtl pre,
@@ -54,7 +57,11 @@ rtl style
   .rtl footer, .rtl header, .rtl hgroup, .rtl menu, .rtl nav, .rtl section {
 	display: block;
 }
-
+.table-responsive{
+	display: inline-grid;
+	display: -webkit-inline-grid;
+	display: -moz-inline-grid;
+}
 /* .rtl ::-moz-selection {
 	background-color: #cce2ff;
 	color: rgba(0, 0, 0, 0.87);
@@ -1135,6 +1142,7 @@ direction: rtl;
 
 .rtl .eps_dots {
 	position: absolute;
+	right: auto;
 	left: 0;
 }
 
@@ -8339,9 +8347,7 @@ input[type=text] {
 		margin-top: 10px;
 		float: none;
 	}
-	router-outlet {
-		display: none;
-	}
+	
 	.wrapper , .footer{
 		margin-left: 240px;
 	}
@@ -9004,7 +9010,9 @@ i.icon1 {
 	width: 100%;
 	float: left;
 	position: relative;
-	height: 281px;
+	display: inline-flex;
+	min-height: 268px;
+    height: auto;
 	border-radius: 5px;
     overflow: hidden;
     
@@ -9178,7 +9186,7 @@ i.icon1 {
     right: 0;
     bottom: 0;
 	background-image: linear-gradient(transparent, rgba(51,51,51,.3) 90%);
-	height: 277px;
+	height: auto;
 	border-radius: 5px;
 }
 
@@ -16065,9 +16073,17 @@ select:invalid { color: #e5e5e5; }
     left: 0;
     right: auto;
 }
-#notification-dropdown:hover .menu, #message-dropdown:hover .menu, #account-dropdown:hover .menu , #language:hover .menu{
+#notification-dropdown:hover .menu,#notification-dropdown:focus-within .menu, 
+#message-dropdown:hover .menu, #message-dropdown:focus-within .menu,
+#account-dropdown:hover .menu ,#account-dropdown:focus-within .menu , 
+#language:hover .menu, #language:focus-within .menu{
 	display:block;
 }
+
+.toggle-menu{
+	display:block !important;
+}
+
 .rtl .uil-angle-right.collapse_menu--icon {
     transform: rotateY(180deg);
 }
