--- a/src/app/pages/user/checkout/checkout.component.html
+++ b/src/app/pages/user/checkout/checkout.component.html
@@ -115,7 +115,7 @@
                 <div class="col-lg-4">
                     <div class="membership_chk_bg rght1528">
                             <div class="checkout_title">
-                                <h4>Order Summary</h4>
+                                <h4>{{"Order Summary" | translate}}</h4>
                                 <img src="assets/images/line.svg" alt="">
                             </div>
                             <div class="order_dt_section">
