--- a/src/app/pages/instructor/view-course/view-course.component.html
+++ b/src/app/pages/instructor/view-course/view-course.component.html
@@ -27,7 +27,7 @@
                             <div class="col-xl-3 col-lg-5 col-md-6">
                                 <div class="preview_video">
                                     <a class="fcrse_img" data-toggle="modal" data-target="#videoModal">
-                                        <img src="assets/images/courses/img-2.jpg" alt="">
+                                        <img src="{{ course?.cover_image_path || 'assets/images/courses/img-14.jpg'}}"alt="">
                                         <div class="course-overlay">
                                             <span class="play_btn1"><i class="uil uil-play"></i></span>
                                             <span class="_215b02">{{'Preview this course' | translate}}</span>
