--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -50,8 +50,8 @@
                             <a class="crse14s">{{course.course_title}}
                             </a>
                             <a class="crse-cate" *ngIf="course.level === '1'">{{"1st" | translate}}</a>
-                            <a class="crse-cate" *ngIf="course.level === '2'">{{"1st" | translate}}</a>
-                            <a class="crse-cate" *ngIf="course.level === '3'">{{"1st" | translate}}</a>
+                            <a class="crse-cate" *ngIf="course.level === '2'">{{"2nd" | translate}}</a>
+                            <a class="crse-cate" *ngIf="course.level === '3'">{{"3rd" | translate}}</a>
                             <a class="crse-cate" *ngIf="course.language === '1'">{{"Arabic" | translate}}</a>
                             <a class="crse-cate" *ngIf="course.language === '2'">{{"English" | translate}}</a>
                             <div class="auth1lnkprce">
