--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -108,7 +108,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="ui search focus mt-15">
+						<div class="recaptcha mt-15">
 							<ngx-recaptcha2 #reCaptchaElm [hl]="userLang" [siteKey]="reCaptchaKey" (load)="onReCapLoad()"
 								
 								formControlName="reCaptcha"></ngx-recaptcha2>
