--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -14,7 +14,8 @@
 <!-- Left Sidebar Start -->
 <nav class="vertical_nav chapter-list">
     <div class="left_section menu_left" id="js-menu">
-        <h4 class=header>{{"Table of content" | translate}}<a class="right"><i [routerLink]="['/user/dashboard']" routerLinkActive="router-link-active"  class="uil uil-home-alt"></i></a></h4>
+        <h4 class=header>{{"Table of content" | translate}}<a class="right"><i [routerLink]="['/user/dashboard']"
+                    routerLinkActive="router-link-active" class="uil uil-home-alt"></i></a></h4>
         <div class="left_section">
             <ul>
                 <li *ngFor="let chapter of chaptersArray; let index = index"
@@ -63,7 +64,7 @@
                         <h2 class="">{{chapterName}}</h2>
                         <span>{{courseName}} {{lectureName}} </span>
                     </div>
-                    <p>{{lectureDesc}}
+                    <p [innerHTML]="lectureDesc | linkify">
                     </p>
 
                 </div>
