--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -1,5 +1,5 @@
 <div class="back_link float-btn ">
-    <a (click)="back()" class="hde151">Back</a>
+    <a (click)="back()" class="hde151">{{"Back" | translate}}</a>
 </div>
 <!-- Header Start -->
 <!-- <input type="checkbox" id="sidekickToggle">
