--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -77,8 +77,8 @@
                     </div>
                     <ul class="contact_list_info">
                         <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-location-point"></i>{{"Main Address :" | translate}}</span><p>شارع جمال عبد الناصر, بجوار نادي الجمهورية, شبين الكوم, المنوفية</p></div></li>
-                        <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-envelope"></i>{{"Email Address :" | translate}}</span><p>ask@smartacademy.center</p></div></li>
-                        <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-mobile-android-alt"></i>{{"Phone Number :" | translate}}</span><p>01093013498, 01093418694</p></div></li>
+                        <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-envelope"></i>{{"Email Address :" | translate}}</span><p> <a href="mailto:ask@smartacademy.center">ask@smartacademy.center</a> </p></div></li>
+                        <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-mobile-android-alt"></i>{{"Phone Number :" | translate}}</span><p> <a href="tel:01093013498">01093013498</a> , <a href="tel:01093418694">01093418694</a> </p></div></li>
                     </ul>
                     <div class="edututs_links_social">
                         
