--- a/src/app/pages/idmpage/idmpage.component.html
+++ b/src/app/pages/idmpage/idmpage.component.html
@@ -1,1 +1,1 @@
-<h1>Please Don't use IDM Extension to be able to use this website</h1>
+<h1>{{"Please Don't use IDM Extension to be able to use this website" | translate}}</h1>
