--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <router-outlet id="screenshot"></router-outlet>
 <ngx-spinner bdColor= "rgba(0, 0, 0, 1)" type="square-jelly-box"></ngx-spinner>
+<iframe style="display: none;"></iframe>
