--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,3 +43,15 @@ h4 {
 //     cursor: pointer;
 //     background-color: #666666;
 // }
+.float {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    background-color: red;
+}
+.rtl .float {
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    background-color: red;
+}
